--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -1,11 +1,10 @@
-.ContainerDropDown {
+.ContainerCollapse {
     width: auto;
-    margin: 0 209px 0 209px;
     display: flex;
     flex-direction: column;
 }
 
-.DropBtn {
+.CollapseBtn {
     border-radius: 5px;
     font-size: 24px;
     margin: 10px 0 0 0;
@@ -18,7 +17,7 @@
     justify-content: space-between;
 }
 
-.ContainerDescription {
+.ContainerContent {
     visibility: hidden;
     height: 0;
     opacity: 0;
@@ -26,7 +25,7 @@
     transition: all .2s ease-in;
 }
 
-.open .ContainerDescription {
+.open .ContainerContent {
     visibility: visible;
     opacity: 1;
     height: auto;
