--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,9 +1,9 @@
-.ContainerCollapse {
+.ContainerAboutContenu {
     margin: 0 105px;
 }
 
 @media screen and (max-width: 768px) {
-    .ContainerCollapse {
+    .ContainerAboutContenu {
         margin: 0 10px;
     }
 }
