Correction Banner et intégration de celui-ci dans les page home et about

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,3 +1,7 @@
+.ContainerTextBanner {
+    margin: 0 50px 30px 50px;
+}
+
 .ContainerGallery {
     margin: 43px 50px;
     border-radius: 25px;
@@ -11,6 +15,9 @@
 }
 
 @media screen and (max-width: 768px) {
+    .ContainerTextBanner {
+        margin: 0 20px 10px 20px;
+    }
 
     .ContainerGallery {
         background-color: #fff;
