--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,8 +1,16 @@
+.ContainerAboutBanner {
+    margin: 0 50px 30px 20px;
+}
+ 
 .ContainerAboutContenu {
     margin: 0 105px;
 }
 
 @media screen and (max-width: 768px) {
+    .ContainerAboutBanner {
+        margin: 0 20px 10px 20px;
+    }
+
     .ContainerAboutContenu {
         margin: 0 10px;
     }
